--- a/프로그램_개발/보안/비밀번호_암호화.md
+++ b/프로그램_개발/보안/비밀번호_암호화.md
@@ -8,8 +8,8 @@
 쉽게 말해, 중요한 정보를 감추기 위해 설계된 알고리즘에 의해
 정보를 알아보기 힘들게 가공하는 일을 뜻합니다.
 암호화된 정보를 **암호문**이라고 하며,
-암호화 전의 원래 정보를 **평문**이라고 합니다.
-평문을 암호문으로 바꾸는 작업을 **암호화**라고 한다면,
+암호화 전의 원래 형태의 정보를 **평문**이라고 합니다.
+평문을 암호문으로 바꾸는 작업은 **암호화**라고 하며,
 반대로 암호문을 평문으로 바꾸는 작업은
 **복호화**(또는 해독, decryption)라고 합니다.
 
@@ -20,7 +20,7 @@
 않은 채로 페이스북 서버에 저장되어 있었다는 사실입니다.
 페이스북과 같은 멀티 유저 서비스는 주로 아이디와 비밀번호를 통해
 개인을 식별합니다.
-이러한 비밀번호의 사용자는 여러 다른 서비스에서도 같은 비밀번호를
+이러한 비밀번호는 사용자가 여러 다른 서비스에서도 같은 비밀번호를
 사용하고 있을 확률이 높습니다.
 따라서 그중 하나의 서버에서 비밀번호가 유출된다면
 해당 비밀번호를 사용하던 모든 서비스의 계정의 보안 위협을 받습니다.
@@ -31,8 +31,8 @@
 
 대한민국의 개인정보 보호법에 의한
 [개인정보의 안전성 확보조치 기준 제 7조의 2](<http://www.law.go.kr/행정규칙/개인정보의안전성확보조치기준/(2019-47,20190607)/제7조>)에
-의하면, 비밀번호의 경우는 **일방향 암호화**하여 저장 해야 합니다.
-일방향 암호화(또는 단방향 암호화)란,
+의하면, 비밀번호의 경우는 **단방향 암호화**하여 저장 해야 합니다.
+단방향 암호화(또는 방향 암호화)란,
 암호화는 가능하지만 복호화는 불가능한(또는 불가능에 가까운) 암호화 방식입니다.
 단방향 암호화의 대표적인 방식으로는 '해시 함수'가 있습니다.
 그리고 해시 함수에 의해 암호화된 암호문을 **다이제스트**라고 합니다.
