--- a/프로그램_개발/보안/비밀번호_암호화.md
+++ b/프로그램_개발/보안/비밀번호_암호화.md
@@ -32,7 +32,7 @@
 대한민국의 개인정보 보호법에 의한
 [개인정보의 안전성 확보조치 기준 제 7조의 2](<http://www.law.go.kr/행정규칙/개인정보의안전성확보조치기준/(2019-47,20190607)/제7조>)에
 의하면, 비밀번호의 경우는 **단방향 암호화**하여 저장 해야 합니다.
-단방향 암호화(또는 방향 암호화)란,
+단방향 암호화(또는 일방향 암호화)란,
 암호화는 가능하지만 복호화는 불가능한(또는 불가능에 가까운) 암호화 방식입니다.
 단방향 암호화의 대표적인 방식으로는 '해시 함수'가 있습니다.
 그리고 해시 함수에 의해 암호화된 암호문을 **다이제스트**라고 합니다.
